Fix spaces on mobile

--- a/amoled.css
+++ b/amoled.css
@@ -53,6 +53,12 @@
 }
 
 @media (max-width: 500px) {
+  .messages .msg {
+    line-height: 1.3;
+  }
+}
+
+@media (max-width: 500px) {
   .messages .msg,
   textarea,
   input {
@@ -395,3 +401,13 @@ kbd {
   color: var(--body-color) !important;
 }
 
+#chat .msg[data-type=condensed] .msg,
+#chat .msg {
+  padding-top: 0;
+  padding-bottom: 0;
+
+  @media (max-width: 479px) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
